versioned_docs/version-4.1/client-api/data-subscriptions/creation/examples.mdx
---
title: "Data Subscriptions: Common Data Subscription Creation Examples"
hide_table_of_contents: true
sidebar_label: Examples
sidebar_position: 1
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java"];


# Data Subscriptions: Common Data Subscription Creation Examples
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

In this page:  

[Create subscription on all documents in a collection](../../../client-api/data-subscriptions/creation/examples.mdx#create-subscription-on-all-documents-in-a-collection)  
[Create subscription with filtering](../../../client-api/data-subscriptions/creation/examples.mdx#create-subscription-with-filtering)  
[Create subscription with filtering and projection](../../../client-api/data-subscriptions/creation/examples.mdx#create-subscription-with-filtering-and-projection)  
[Create subscription with load document in filter projection](../../../client-api/data-subscriptions/creation/examples.mdx#create-subscription-with-load-document-in-filter-projection)  
[Create subscription with include statement](../../../client-api/data-subscriptions/creation/examples.mdx#create-subscription-with-include-statement)  
[Create revisions enabled subscription](../../../client-api/data-subscriptions/creation/examples.mdx#create-revisions-enabled-subscription)  

</Admonition>
## Create subscription on all documents in a collection

Here we create a plain subscription on the Orders collection, without any constraint or transformation.
<Tabs groupId='languageSyntax'>
<TabItem value="Generic-syntax" label="Generic-syntax">
<CodeBlock language="csharp">
{`name = await store.Subscriptions.CreateAsync(new SubscriptionCreationOptions<Order>
{
    Name = "OrdersProcessingSumbscription"
});
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL-syntax" label="RQL-syntax">
<CodeBlock language="csharp">
{`name = await store.Subscriptions.CreateAsync(new SubscriptionCreationOptions()
{
    Query = "From Orders"
});
`}
</CodeBlock>
</TabItem>
</Tabs>



## Create subscription with filtering

Here we create a subscription on Orders collection, which total order revenue is greater than 100.
<Tabs groupId='languageSyntax'>
<TabItem value="Generic-syntax" label="Generic-syntax">
<CodeBlock language="csharp">
{`name = await store.Subscriptions.CreateAsync<Order>(x =>
    x.Lines.Sum(line => line.PricePerUnit * line.Quantity) > 100);
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL-syntax" label="RQL-syntax">
<CodeBlock language="csharp">
{`name = await store.Subscriptions.CreateAsync(new SubscriptionCreationOptions()
{
    Query = @"
                declare function getOrderLinesSum(doc){
                    var sum = 0;
                    for (var i in doc.Lines) { sum += doc.Lines[i];}
                    return sum;
                }
                From Orders as o 
                Where getOrderLinesSum(o) > 100"
});
`}
</CodeBlock>
</TabItem>
</Tabs>



## Create subscription with filtering and projection

Here we create a subscription on Orders collection, which total order revenue is greater than 100, and return only ID and total revenue.
<Tabs groupId='languageSyntax'>
<TabItem value="Generic-syntax" label="Generic-syntax">
<CodeBlock language="csharp">
{`name = store.Subscriptions.Create(
    new SubscriptionCreationOptions<Order>()
    {
        Filter = x => x.Lines.Sum(line => line.PricePerUnit * line.Quantity) > 100,
        Projection = x => new
        {
            Id = x.Id,
            Total = x.Lines.Sum(line => line.PricePerUnit * line.Quantity)
        }
    });
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL-syntax" label="RQL-syntax">
<CodeBlock language="csharp">
{`name = await store.Subscriptions.CreateAsync(new SubscriptionCreationOptions()
{
    Query = @"declare function getOrderLinesSum(doc){
                    var sum = 0;
                    for (var i in doc.Lines) { sum += doc.Lines[i];}
                    return sum;
                }

                declare function projectOrder(doc){
                    return {
                        Id: order.Id,
                        Total: getOrderLinesSum(order)
                    };
                }

                From Orders as o 
                Where getOrderLinesSum(o) > 100
                Select projectOrder(o)"
});
`}
</CodeBlock>
</TabItem>
</Tabs>



## Create subscription with load document in filter projection

Here we create a subscription on Orders collection, which total order revenue is greater than 100, and return ID, total revenue, shipping address and responsible employee name.
<Tabs groupId='languageSyntax'>
<TabItem value="Generic-syntax" label="Generic-syntax">
<CodeBlock language="csharp">
{`name = store.Subscriptions.Create(
    new SubscriptionCreationOptions<Order>()
    {
        Filter = x => x.Lines.Sum(line => line.PricePerUnit * line.Quantity) > 100,
        Projection = x => new
        {
            Id = x.Id,
            Total = x.Lines.Sum(line => line.PricePerUnit * line.Quantity),
            ShipTo = x.ShipTo,
            EmployeeName = RavenQuery.Load<Employee>(x.Employee).FirstName + " " +
                           RavenQuery.Load<Employee>(x.Employee).LastName
        }
    });
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL-syntax" label="RQL-syntax">
<CodeBlock language="csharp">
{`name = await store.Subscriptions.CreateAsync(new SubscriptionCreationOptions()
{
    Query = @"declare function getOrderLinesSum(doc){
                    var sum = 0;
                    for (var i in doc.Lines) { sum += doc.Lines[i];}
                    return sum;
                }

                declare function projectOrder(doc){
                    var employee = load(doc.Employee);
                    return {
                        Id: order.Id,
                        Total: getOrderLinesSum(order),
                        ShipTo: order.ShipTo,
                        EmployeeName: employee.FirstName + ' ' + employee.LastName

                    };
                }

                From Orders as o 
                Where getOrderLinesSum(o) > 100
                Select projectOrder(o)"
});
`}
</CodeBlock>
</TabItem>
</Tabs>



## Create subscription with include statement

Here we create a subscription on Orders collection, which returns the orders and brings along all products mentioned in the order as included documents. 
See the usage example [here](../../../client-api/data-subscriptions/consumption/examples.mdx#subscription-that-uses-included-documents).

Include statements supported only with raw RQL. Include statements come in two forms, like in any other RQL statements:  
1. Include statement in the end of the query, starting with the `include` keyword, followed by paths to the field containing the ids of the documents to include.  
If projection is performed, the mechanism will look for the paths in the projected result, rather then the original document.  
It is recommended to prefer this approach when possible both because of clarity of the query and slightly better performance.  
2. Include function call inside a 'declared' function.  

<Tabs groupId='languageSyntax'>
<TabItem value="RQL-path-syntax" label="RQL-path-syntax">
<CodeBlock language="csharp">
{`store.Subscriptions.Create(new SubscriptionCreationOptions()
{
    Query = @"from Orders include Lines[].Product"
});
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL-javascript-syntax" label="RQL-javascript-syntax">
<CodeBlock language="csharp">
{`store.Subscriptions.Create(new SubscriptionCreationOptions()
{
    Query = @"
                declare function includeProducts(doc) 
                {
                    doc.IncludedFields=0;
                    doc.LinesCount = doc.Lines.length;
                    for (let i=0; i< doc.Lines.length; i++)
                    {
                        doc.IncludedFields++;
                        include(doc.Lines[i].Product);
                    }
                    return doc;
                }
                from Orders as o select includeProducts(o)"
});
`}
</CodeBlock>
</TabItem>
</Tabs>




## Create revisions enabled subscription

Here we create a subscription on Orders collection, which returns current and previous version of the subscriptions. 
Please see the [page](../../../client-api/data-subscriptions/advanced-topics/subscription-with-revisioning.mdx) dedicated to subscriptions with revisions for more details and examples.

<Tabs groupId='languageSyntax'>
<TabItem value="Generic-syntax" label="Generic-syntax">
<CodeBlock language="csharp">
{`name = store.Subscriptions.Create(
    new SubscriptionCreationOptions<Revision<Order>>());
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL-syntax" label="RQL-syntax">
<CodeBlock language="csharp">
{`name = await store.Subscriptions.CreateAsync(new SubscriptionCreationOptions()
{
    Query = @"From Orders (Revisions = true)"
});
`}
</CodeBlock>
</TabItem>
</Tabs>








</LanguageContent>
<LanguageContent language="java">

<Admonition type="note" title="Note">

In this page:  

[Create subscription on all documents in a collection](../../../client-api/data-subscriptions/creation/examples.mdx#create-subscription-on-all-documents-in-a-collection)  
[Create subscription with filtering](../../../client-api/data-subscriptions/creation/examples.mdx#create-subscription-with-filtering)  
[Create subscription with filtering and projection](../../../client-api/data-subscriptions/creation/examples.mdx#create-subscription-with-filtering-and-projection)  
[Create subscription with load document in filter projection](../../../client-api/data-subscriptions/creation/examples.mdx#create-subscription-with-load-document-in-filter-projection)  
[Create subscription with include statement](../../../client-api/data-subscriptions/creation/examples.mdx#create-subscription-with-include-statement)  
[Create revisions enabled subscription](../../../client-api/data-subscriptions/creation/examples.mdx#create-revisions-enabled-subscription)  

</Admonition>
## Create subscription on all documents in a collection

Here we create a plain subscription on the Orders collection, without any constraint or transformation.
<Tabs groupId='languageSyntax'>
<TabItem value="Generic-syntax" label="Generic-syntax">
<CodeBlock language="java">
{`name = store.subscriptions().create(Order.class);
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL-syntax" label="RQL-syntax">
<CodeBlock language="java">
{`SubscriptionCreationOptions options = new SubscriptionCreationOptions();
options.setQuery("from Orders");
name = store.subscriptions().create(options);
`}
</CodeBlock>
</TabItem>
</Tabs>



## Create subscription with filtering

Here we create a subscription on Orders collection, which total order revenue is greater than 100.
<TabItem value="create_filter_only_RQL" label="create_filter_only_RQL">
<CodeBlock language="java">
{`SubscriptionCreationOptions options = new SubscriptionCreationOptions();
options.setQuery("declare function getOrderLinesSum(doc) \{" +
    " var sum = 0;" +
    " for (var i in doc.Lines) \{ sum += doc.Lines[i]; \}" +
    " return sum;" +
    "\}" +
    "from Orders as o " +
    "where getOrderLinesSum(o) > 100 ");

name = store.subscriptions().create(options);
`}
</CodeBlock>
</TabItem>



## Create subscription with filtering and projection

Here we create a subscription on Orders collection, which total order revenue is greater than 100, and return only ID and total revenue.
<TabItem value="create_filter_and_projection_RQL" label="create_filter_and_projection_RQL">
<CodeBlock language="java">
{`SubscriptionCreationOptions options = new SubscriptionCreationOptions();
options.setQuery(" declare function getOrderLinesSum(doc) \{" +
    "  var sum = 0; " +
    "  for (var i in doc.Lines) \{ sum += doc.Lines[i]; \}" +
    "  return sum;" +
    "\}" +
    "" +
    " declare function projectOrder(doc) \{" +
    "    return \{" +
    "        Id: order.Id," +
    "        Total: getOrderLinesSum(order)" +
    "    \}" +
    " \}" +
    " from order as o " +
    " where getOrderLinesSum(o) > 100 " +
    " select projectOrder(o)");

name = store.subscriptions().create(options);
`}
</CodeBlock>
</TabItem>



## Create subscription with load document in filter projection

Here we create a subscription on Orders collection, which total order revenue is greater than 100, and return ID, total revenue, shipping address and responsible employee name.

<TabItem value="create_filter_and_load_document_RQL" label="create_filter_and_load_document_RQL">
<CodeBlock language="java">
{`SubscriptionCreationOptions options = new SubscriptionCreationOptions();
options.setQuery(" declare function getOrderLinesSum(doc) \{" +
    "  var sum = 0; " +
    "  for (var i in doc.Lines) \{ sum += doc.Lines[i]; \}" +
    "  return sum;" +
    "\}" +
    "" +
    " declare function projectOrder(doc) \{" +
    "    var employee = LoadDocument(doc.Employee); " +
    "    return \{" +
    "        Id: order.Id," +
    "        Total: getOrderLinesSum(order)," +
    "        ShipTo: order.ShipTo," +
    "        EmployeeName: employee.FirstName + ' ' + employee.LastName " +
    "    \}" +
    " \}" +
    " from order as o " +
    " where getOrderLinesSum(o) > 100 " +
    " select projectOrder(o)");

name = store.subscriptions().create(options);
`}
</CodeBlock>
</TabItem>



## Create subscription with include statement

Here we create a subscription on Orders collection, which returns the orders and brings along all products mentioned in the order as included documents. 
See the usage example [here](../../../client-api/data-subscriptions/consumption/examples.mdx#subscription-that-uses-included-documents).

Include statements supported only with raw RQL. Include statements come in two forms, like in any other RQL statements:  
1. Include statement in the end of the query, starting with the `include` keyword, followed by paths to the field containing the ids of the documents to include.  
If projection is performed, the mechanism will look for the paths in the projected result, rather then the original document.  
It is recommended to prefer this approach when possible both because of clarity of the query and slightly better performance.  
2. Include function call inside a 'declared' function.  

<Tabs groupId='languageSyntax'>
<TabItem value="RQL-path-syntax" label="RQL-path-syntax">
<CodeBlock language="java">
{`SubscriptionCreationOptions options = new SubscriptionCreationOptions();
options.setQuery("from Orders include Lines[].Product");
store.subscriptions().create(options);
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL-javascript-syntax" label="RQL-javascript-syntax">
<CodeBlock language="java">
{`SubscriptionCreationOptions options = new SubscriptionCreationOptions();
options.setQuery("declare function includeProducts(doc) " +
    "   {" +
    "       doc.IncludedFields=0;" +
    "       doc.LinesCount = doc.Lines.length;" +
    "       for (let i=0; i< doc.Lines.length; i++)" +
    "       {" +
    "           doc.IncludedFields++;" +
    "           include(doc.Lines[i].Product);" +
    "       }" +
    "       return doc;" +
    "   }" +
    "   from Orders as o select includeProducts(o)");
store.subscriptions().create(options);
`}
</CodeBlock>
</TabItem>
</Tabs>



## Create revisions enabled subscription

Here we create a subscription on Orders collection, which returns current and previous version of the subscriptions. 
Please see the [page](../../../client-api/data-subscriptions/advanced-topics/subscription-with-revisioning.mdx) dedicated to subscriptions with revisions for more details and examples.

<Tabs groupId='languageSyntax'>
<TabItem value="Generic-syntax" label="Generic-syntax">
<CodeBlock language="java">
{`name = store.subscriptions().createForRevisions(Order.class);
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL-syntax" label="RQL-syntax">
<CodeBlock language="java">
{`SubscriptionCreationOptions options = new SubscriptionCreationOptions();
options.setQuery("from orders (Revisions = true)");
name = store.subscriptions().createForRevisions(Order.class, options);
`}
</CodeBlock>
</TabItem>
</Tabs>




</LanguageContent>

<!---
### Data Subscriptions:
- [What are Data Subscriptions](../../../client-api/data-subscriptions/what-are-data-subscriptions)
- [How to Create a Data Subscription](../../../client-api/data-subscriptions/creation/how-to-create-data-subscription)
- [How to Consume a Data Subscription](../../../client-api/data-subscriptions/consumption/how-to-consume-data-subscription)

### Knowledge Base:
- [JavaScript Engine](../../../server/kb/javascript-engine)


-->